--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -10,14 +10,14 @@
         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
-            data-bs-toggle="dropdown" aria-expanded="false">Spearfishing Store</a>
+          <!-- <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
+            data-bs-toggle="dropdown" aria-expanded="false">Spearfishing Store</a> -->
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="#!">Diving Clothes</a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#!">Item 1</a></li>
                 <li><a class="dropdown-item" href="#!">Item 2</a></li>
-                <!-- Add more dropdown items here -->
+                Add more dropdown items here
               
               </ul>
             </li>
