--- a/src/app/Components/product-details/product-details.component.html
+++ b/src/app/Components/product-details/product-details.component.html
@@ -2,7 +2,7 @@
 <div class="row product-details" *ngIf="productData">
     <div class="col-sm-6">
         
-    <img  class="product-img" src="{{productData.image}}" alt="">
+    <img  class="product-img" src="http://127.0.0.1:8000{{productData.image}}" alt="">
     </div>
     <div class="col-sm-6">
         <div class="details">
